fix overflox x on mobile

--- a/styles/base.less
+++ b/styles/base.less
@@ -10,8 +10,9 @@
 }
 
 html {
-  width: 100vw!important; 
+  width: 100%!important; 
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
@@ -621,8 +622,13 @@ footer { width: 100vw; padding: 50px; box-sizing: border-box;}
     .footer-logo {height: 150px; width: auto;}
     .email-mailchimp-right {width: 100%; text-align: center;}
     article {  padding-bottom: 35px;}
+  
 }
 
+@media (max-width: 450px){
+
+  .product {min-width: 400px;}
+}
 
 
 
